==> AddictiveInstruments/ADIOS/mios32/STM32G0xx/mios32_board.c <==
#include <mios32.h>
#  define MIOS32_BOARD_J15_LED_NUM 1
#  define MIOS32_BOARD_J15_LED_NUM 1
#  define MIOS32_BOARD_J15_LED_NUM 1
#  define MIOS32_BOARD_J15_LED_NUM 1
#define J5_NUM_PINS 0
#define J5_NUM_PINS 0
#define J5_NUM_PINS 0
#define J10_NUM_PINS 0
#define J10_NUM_PINS 0
#define J10_NUM_PINS 0
# define J28_NUM_PINS 0
# define J28_NUM_PINS 0
# define J28_NUM_PINS 0
#define J15_MODE 1	//Serial only
#define J15_SER_PORT       GPIOA        // used as DC (data/command select) for serial interfaces
#define J15_SER_PIN        LL_GPIO_PIN_10
#define J15_E1_PORT        GPIOB        // used to control SCLK of serial interfaces
#define J15_E1_PIN         LL_GPIO_PIN_3
#define J15_RW_PORT        GPIOA        // used to control data output of serial interfaces
#define J15_RW_PIN         LL_GPIO_PIN_12
#define J15_CS1_PORT        GPIOA       // used to control SCLK of serial interfaces
#define J15_CS1_PIN         LL_GPIO_PIN_11
#define J15_CS2_PORT        GPIOA
#define J15_CS2_PIN         LL_GPIO_PIN_15
#define J15_PIN_SER(b)  MIOS32_SYS_STM_PINSET(J15_SER_PORT, J15_SER_PIN, b)
#define J15_PIN_E1(b)   MIOS32_SYS_STM_PINSET(J15_E1_PORT, J15_E1_PIN, b)
#define J15_PIN_RW(b)   MIOS32_SYS_STM_PINSET(J15_RW_PORT, J15_RW_PIN, b)
#define J15_PIN_CS1(b)   MIOS32_SYS_STM_PINSET(J15_CS1_PORT, J15_CS1_PIN, b)
#define J15_PIN_CS2(b)   MIOS32_SYS_STM_PINSET(J15_CS2_PORT, J15_CS2_PIN, b)
#define J15_PIN_SERLCD_DATAOUT(b) MIOS32_SYS_STM_PINSET(J15_RW_PORT, J15_RW_PIN, b)

static s32 MIOS32_BOARD_PinInitHlp(GPIO_TypeDef *port, u16 pin_mask, mios32_board_pin_mode_t mode)
{
  LL_GPIO_InitTypeDef GPIO_InitStructure;
  LL_GPIO_StructInit(&GPIO_InitStructure);
  GPIO_InitStructure.Speed = LL_GPIO_SPEED_FREQ_HIGH;
  GPIO_InitStructure.Pin = pin_mask;

  switch( mode ) {
  case MIOS32_BOARD_PIN_MODE_IGNORE:
    return 0; // don't touch
  case MIOS32_BOARD_PIN_MODE_ANALOG:
    GPIO_InitStructure.Mode = LL_GPIO_MODE_ANALOG;
    GPIO_InitStructure.Pull = LL_GPIO_PULL_NO;
    break;
  case MIOS32_BOARD_PIN_MODE_INPUT:
    GPIO_InitStructure.Mode = LL_GPIO_MODE_INPUT;
    GPIO_InitStructure.Pull = LL_GPIO_PULL_NO;
    break;
  case MIOS32_BOARD_PIN_MODE_INPUT_PD:
    GPIO_InitStructure.Mode = LL_GPIO_MODE_INPUT;
    GPIO_InitStructure.Pull = LL_GPIO_PULL_DOWN;
    break;
  case MIOS32_BOARD_PIN_MODE_INPUT_PU:
    GPIO_InitStructure.Mode = LL_GPIO_MODE_INPUT;
    GPIO_InitStructure.Pull = LL_GPIO_PULL_UP;
    break;
  case MIOS32_BOARD_PIN_MODE_OUTPUT_PP:
    GPIO_InitStructure.Mode = LL_GPIO_MODE_OUTPUT;
    GPIO_InitStructure.OutputType = LL_GPIO_OUTPUT_PUSHPULL;
    break;
  case MIOS32_BOARD_PIN_MODE_OUTPUT_OD:
    GPIO_InitStructure.Mode = LL_GPIO_MODE_OUTPUT;
    GPIO_InitStructure.OutputType = LL_GPIO_OUTPUT_OPENDRAIN;
    break;
  default:
    return -2; // invalid pin mode
  }

  // init IO mode
  LL_GPIO_Init(port, &GPIO_InitStructure);

  return 0; // no error
}

s32 MIOS32_BOARD_LED_Init(u32 leds)
{
#if defined(MIOS32_PROCESSOR_STM32G050K8) || defined(MIOS32_PROCESSOR_STM32G070CB)
#if MIOS32_BOARD_J15_LED_NUM >= 1
  
  // 2 LEDs are available
  if( leds & 1 ) {
    MIOS32_BOARD_PinInitHlp(GPIOA, LL_GPIO_PIN_12, MIOS32_BOARD_PIN_MODE_OUTPUT_PP); // LED1
  }
  
#if MIOS32_BOARD_J15_LED_NUM >= 2
  if( leds & 2 ) {
    MIOS32_BOARD_PinInitHlp(GPIOC, LL_GPIO_PIN_7, MIOS32_BOARD_PIN_MODE_OUTPUT_PP); // LED2
  }
#endif
  
  if( leds & 0xfffffffc)
    return -2; // LED doesn't exist
  
#endif
  return 0; // no error
  
#elif defined(MIOS32_PROCESSOR_STM32G030K6)
	#if MIOS32_BOARD_J15_LED_NUM >= 1
	  if( leds & 1 ) { // LED1
		  MIOS32_BOARD_PinInitHlp(GPIOB, LL_GPIO_PIN_1, MIOS32_BOARD_PIN_MODE_OUTPUT_PP); // LED1
	  }
	#endif
	  if( leds & 0xfffffffe)
		return -2; // LED doesn't exist

	  return 0; // no error

#elif defined(MIOS32_PROCESSOR_STM32G031K8)
	#if MIOS32_BOARD_J15_LED_NUM >= 1
	  if( leds & 1 ) { // LED1
		  MIOS32_BOARD_PinInitHlp(GPIOB, LL_GPIO_PIN_1, MIOS32_BOARD_PIN_MODE_OUTPUT_PP); // LED1
	  }
	#endif
	  if( leds & 0xfffffffe)
		return -2; // LED doesn't exist

	  return 0; // no error

#else
  return -1; // no LED specified for board
#endif
}

s32 MIOS32_BOARD_LED_Set(u32 leds, u32 value)
{
#if defined(MIOS32_PROCESSOR_STM32G050K8) || defined(MIOS32_PROCESSOR_STM32G070CB)
	#if MIOS32_BOARD_J15_LED_NUM >= 1
	  if( leds & 1 ) { // LED1
		MIOS32_SYS_STM_PINSET(GPIOA, LL_GPIO_PIN_12, value & 1);
	  }
	#endif
	#if MIOS32_BOARD_J15_LED_NUM >= 2
	  if( leds & 2 ) { // LED2
		MIOS32_SYS_STM_PINSET(GPIOC, LL_GPIO_PIN_7, value & 2);
	  }
	#endif
	  if( leds & 0xfffffffc)
		return -2; // LED doesn't exist

	  return 0; // no error
#elif defined(MIOS32_PROCESSOR_STM32G030K6)
	#if MIOS32_BOARD_J15_LED_NUM >= 1
	  if( leds & 1 ) { // LED1
		MIOS32_SYS_STM_PINSET(GPIOB, LL_GPIO_PIN_1, value & 1);
	  }
	#endif
	  if( leds & 0xfffffffe)
		return -2; // LED doesn't exist

	  return 0; // no error

#elif defined(MIOS32_PROCESSOR_STM32G031K8)
	#if MIOS32_BOARD_J15_LED_NUM >= 1
	  if( leds & 1 ) { // LED1
		  MIOS32_SYS_STM_PINSET(GPIOB, LL_GPIO_PIN_1, value & 1);
	  }
	#endif
	  if( leds & 0xfffffffe)
		return -2; // LED doesn't exist

	  return 0; // no error

#else
  // temporary
  return -1; // no LED specified for board
#endif
}

u32 MIOS32_BOARD_LED_Get(void)
{
  u32 values = 0;

#if defined(MIOS32_PROCESSOR_STM32G050K8) || defined(MIOS32_PROCESSOR_STM32G070CB)
	#if MIOS32_BOARD_J15_LED_NUM >= 1
	  if( GPIOA->ODR & LL_GPIO_PIN_12 ) // LED1
		values |= (1 << 0);
	#endif
	#if MIOS32_BOARD_J15_LED_NUM >= 2
	  if( GPIOC->ODR & LL_GPIO_PIN_7 ) // LED2
		values |= (1 << 1);
	#endif
#elif defined(MIOS32_PROCESSOR_STM32G030K6)
	#if MIOS32_BOARD_J15_LED_NUM >= 1
	  if( GPIOB->ODR & LL_GPIO_PIN_1 ) // LED1
		values |= (1 << 0);
	#endif

#elif defined(MIOS32_PROCESSOR_STM32G031K8)
	#if MIOS32_BOARD_J15_LED_NUM >= 1
	  if( GPIOB->ODR & LL_GPIO_PIN_1 ) // LED1
		values |= (1 << 0);
	#endif

#endif
  
  return values;
}

s32 MIOS32_BOARD_J15_PortInit(u32 mode)
{
#if J15_MODE == 0
  return -1; // LCD port not available
#else
  // currently only mode 0 and 1 supported
  if( mode != 0 && mode != 1 )
    return -1; // unsupported mode

  LL_GPIO_InitTypeDef GPIO_InitStructure;
  LL_GPIO_StructInit(&GPIO_InitStructure);

#if J15_MODE == 2
  J15_PIN_SCLK_0;
  J15_PIN_RCLK_0;
  J15_PIN_E2(0);
#ifdef MIOS32_BOARD_LCD_E3_PORT
  LCD_PIN_E3(0);
#endif
#ifdef MIOS32_BOARD_LCD_E4_PORT
  LCD_PIN_E4(0);
#endif
#elif J15_MODE == 1
  J15_PIN_CS1(0);
  J15_PIN_CS2(0);
#endif
  J15_PIN_RW(0);
  J15_PIN_E1(0);


  // configure push-pull pins
  GPIO_InitStructure.Mode = LL_GPIO_MODE_OUTPUT;
  GPIO_InitStructure.OutputType = LL_GPIO_OUTPUT_PUSHPULL;
  GPIO_InitStructure.Speed = LL_GPIO_SPEED_FREQ_MEDIUM; // weak driver to reduce transients
  GPIO_InitStructure.Pull = LL_GPIO_PULL_UP;
#if J15_MODE == 2
  GPIO_InitStructure.Pin = J15_SCLK_PIN;
  LL_GPIO_Init(J15_SCLK_PORT, &GPIO_InitStructure);

  GPIO_InitStructure.Pin = J15_RCLK_PIN;
  LL_GPIO_Init(J15_RCLK_PORT, &GPIO_InitStructure);
#elif J15_MODE == 1
  GPIO_InitStructure.Pin = J15_CS1_PIN;
  LL_GPIO_Init(J15_CS1_PORT, &GPIO_InitStructure);

  GPIO_InitStructure.Pin = J15_CS2_PIN;
  LL_GPIO_Init(J15_CS2_PORT, &GPIO_InitStructure);
#endif
  // configure open-drain pins (if OD option enabled)
  //if( mode )
    //GPIO_InitStructure.OutputType = LL_GPIO_OUTPUT_OPENDRAIN;

  GPIO_InitStructure.Pin = J15_SER_PIN;
  LL_GPIO_Init(J15_SER_PORT, &GPIO_InitStructure);

  GPIO_InitStructure.Pin = J15_E1_PIN;
  LL_GPIO_Init(J15_E1_PORT, &GPIO_InitStructure);
#if J15_MODE == 2
  GPIO_InitStructure.Pin = J15_E2_PIN;
  LL_GPIO_Init(J15_E2_PORT, &GPIO_InitStructure);

#ifdef MIOS32_BOARD_LCD_E3_PORT
  GPIO_InitStructure.Pin = LCD_E3_PIN;
  LL_GPIO_Init(LCD_E3_PORT, &GPIO_InitStructure);
#endif

#ifdef MIOS32_BOARD_LCD_E4_PORT
  GPIO_InitStructure.Pin = LCD_E4_PIN;
  LL_GPIO_Init(LCD_E4_PORT, &GPIO_InitStructure);
#endif
#endif

  GPIO_InitStructure.Pin = J15_RW_PIN;
  LL_GPIO_Init(J15_RW_PORT, &GPIO_InitStructure);

#if J15_MODE >= 2
  // configure "busy" input with pull-up
  GPIO_InitStructure.Mode = LL_GPIO_MODE_INPUT;
  GPIO_InitStructure.Pull = LL_GPIO_PULL_UP;
  GPIO_InitStructure.Pin = J15_D7_PIN;
  LL_GPIO_Init(J15_D7_PORT, &GPIO_InitStructure);
#endif
  return 0; // no error
#endif
}

s32 MIOS32_BOARD_DAC_PinInit(u8 chn, u8 enable)
{
#if defined(MIOS32_PROCESSOR_STM32G030K6) || defined(MIOS32_PROCESSOR_STM32G031K8) || defined(MIOS32_PROCESSOR_STM32G050K8)  || defined(MIOS32_PROCESSOR_STM32G070CB)
  return -1; // generally not supported. Try DAC access for all other processors
#else
  if( chn >= 2 )
    return -1; // channel not supported

  if( enable ) {
    // enable DAC clock
    //RCC_APB1PeriphClockCmd(RCC_APB1Periph_DAC, ENABLE);
    LL_APB1_GRP1_EnableClock(LL_APB1_GRP1_PERIPH_DAC1);

    // Once the DAC channel is enabled, the corresponding GPIO pin is automatically 
    // connected to the DAC converter. In order to avoid parasitic consumption, 
    // the GPIO pin should be configured in analog
    LL_GPIO_InitTypeDef GPIO_InitStructure;
    GPIO_InitStructure.Mode = LL_GPIO_MODE_ANALOG;

    // init DAC
    LL_DAC_InitTypeDef            DAC_InitStructure;
    DAC_InitStructure.TriggerSource= LL_DAC_TRIG_SOFTWARE;
    DAC_InitStructure.OutputBuffer = LL_DAC_OUTPUT_BUFFER_ENABLE;

    switch( chn ) {
      case 0:
	GPIO_InitStructure.Pin =  LL_GPIO_PIN_4;
	LL_GPIO_Init(GPIOA, &GPIO_InitStructure);
	LL_DAC_Init(DAC1, LL_DAC_CHANNEL_1, &DAC_InitStructure);
	LL_DAC_Enable(DAC1, LL_DAC_CHANNEL_1);
	break;

      case 1:
	GPIO_InitStructure.Pin =  LL_GPIO_PIN_5;
	LL_GPIO_Init(GPIOA, &GPIO_InitStructure);
	LL_DAC_Init(DAC1, LL_DAC_CHANNEL_2, &DAC_InitStructure);
	LL_DAC_Enable(DAC1, LL_DAC_CHANNEL_2);
	break;

      default:
	return -2; // unexpected (chn already checked above)
    }
    
  } else {
    // disable DAC channel
    switch( chn ) {
      case 0: LL_DAC_Disable(DAC1, LL_DAC_CHANNEL_1); break;
      case 1: LL_DAC_Disable(DAC1, LL_DAC_CHANNEL_2); break;
      default:
	return -2; // unexpected (chn already checked above)
    }
  }

  return 0; // no error
#endif
}

s32 MIOS32_BOARD_DAC_PinSet(u8 chn, u16 value)
{
#if defined(MIOS32_PROCESSOR_STM32G030K6) || defined(MIOS32_PROCESSOR_STM32G031K8) || defined(MIOS32_PROCESSOR_STM32G050K8)  || defined(MIOS32_PROCESSOR_STM32G070CB)
  return -1; // generally not supported. Try DAC access for all other processors
#else
  switch( chn ) {
    case 0:
      LL_DAC_ConvertData12LeftAligned(DAC1, LL_DAC_CHANNEL_1, value);
      LL_DAC_TrigSWConversion(DAC1, LL_DAC_CHANNEL_1);
      //DAC_SetChannel1Data(DAC_Align_12b_L, value);
      //DAC_SoftwareTriggerCmd(DAC_Channel_1, ENABLE);
      break;

    case 1:
      LL_DAC_ConvertData12LeftAligned(DAC1, LL_DAC_CHANNEL_2, value);
      LL_DAC_TrigSWConversion(DAC1, LL_DAC_CHANNEL_2);
      //DAC_SetChannel2Data(DAC_Align_12b_L, value);
      //DAC_SoftwareTriggerCmd(DAC_Channel_2, ENABLE);
      break;

    default:
      return -1; // channel not supported
  }

  return 0; // no error
#endif
}
